# ai-jiasuqi-whip

./: .gitignore  README.md  package-lock.json  package.json
electron/: README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css
neutralinojs/: README.md  neutralino.config.json
neutralinojs/resources/: index.html  styles.css
neutralinojs/resources/js/: main.js
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tauri/: README.md
tauri/src/: index.html  main.js  style.css
tauri/src-tauri/: Cargo.toml
tauri/src-tauri/capabilities/: default.json
