[package]
name = "aiwhip-tauri"
version = "1.0.0"
description = "Ai加速器_鞭打版 - Desktop Tool"
authors = ["Zed"]
edition = "2021"

[lib]
name = "aiwhip_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
device_query = "2.1"
